force-app/main/default/objects/Case/fields/Activities_Done__c.field-meta.xml
<CustomField>
    <fullName>Activities_Done__c</fullName>
    <label>Activities Done</label>
    <length>100</length>
    <type>Text</type>
</CustomField>