force-app/main/default/objects/Case/fields/Additional_Case__c.field-meta.xml
<CustomField>
    <fullName>Additional_Case__c</fullName>
    <label>Additional Case #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>