force-app/main/default/objects/Case/fields/AR_Closure_DateTime__c.field-meta.xml
<CustomField>
    <fullName>AR_Closure_DateTime__c</fullName>
    <label>AR Closure DateTime</label>
    <type>DateTime</type>
</CustomField>