force-app/main/default/objects/Case/fields/AR_Number__c.field-meta.xml
<CustomField>
    <fullName>AR_Number__c</fullName>
    <label>Legacy AR Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>