force-app/main/default/objects/Case/fields/Area_Pfizer_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Area_Pfizer_Clinical__c</fullName>
    <label>Area (Pfizer Clinical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Creation</fullName>
            </value>
            <value>
                <fullName>Account De-activation</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Account Modification</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Application Access Manager</fullName>
            </value>
            <value>
                <fullName>Business Process</fullName>
            </value>
            <value>
                <fullName>CAM Tool</fullName>
            </value>
            <value>
                <fullName>CIH</fullName>
            </value>
            <value>
                <fullName>CTMS</fullName>
            </value>
            <value>
                <fullName>Central Designer</fullName>
            </value>
            <value>
                <fullName>Closeout</fullName>
            </value>
            <value>
                <fullName>Conform</fullName>
            </value>
            <value>
                <fullName>DeCS</fullName>
            </value>
            <value>
                <fullName>Exostar</fullName>
            </value>
            <value>
                <fullName>Exostar Issues</fullName>
            </value>
            <value>
                <fullName>GRAABS</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Impala-C3i</fullName>
            </value>
            <value>
                <fullName>Impala-KitVerify</fullName>
            </value>
            <value>
                <fullName>Impala-PFE</fullName>
            </value>
            <value>
                <fullName>Impala-Shipment</fullName>
            </value>
            <value>
                <fullName>Impala2.0-C3i</fullName>
            </value>
            <value>
                <fullName>Impala2.0-PFE</fullName>
            </value>
            <value>
                <fullName>Inform</fullName>
            </value>
            <value>
                <fullName>InteliNotion</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>IntraLinks</fullName>
            </value>
            <value>
                <fullName>ME&amp;Unblinding</fullName>
            </value>
            <value>
                <fullName>OC RDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>