force-app/main/default/objects/Case/fields/AUF_Closed_URL__c.field-meta.xml
<CustomField>
    <fullName>AUF_Closed_URL__c</fullName>
    <formula>$Label.AUF_Close_URL&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUF Closed URL</label>
    <type>Text</type>
</CustomField>