force-app/main/default/objects/Case/fields/AUF_Open_URL__c.field-meta.xml
<CustomField>
    <fullName>AUF_Open_URL__c</fullName>
    <formula>$Label.AUF_Open_URL&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUF Open URL</label>
    <type>Text</type>
</CustomField>