force-app/main/default/objects/Case/fields/C3i_IRT_Usage__c.field-meta.xml
<CustomField>
    <fullName>C3i_IRT_Usage__c</fullName>
    <formula>Contact_Studies__r.Study__r.IRT_Usage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C3i IRT Usage</label>
    <type>Text</type>
</CustomField>