force-app/main/default/objects/Case/fields/Calls__c.field-meta.xml
<CustomField>
    <fullName>Calls__c</fullName>
    <label># Calls</label>
    <length>100</length>
    <type>Text</type>
</CustomField>