force-app/main/default/objects/Case/fields/Case_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Source</label>
    <referenceTo>Picklist_Value__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>