force-app/main/default/objects/Case/fields/CaseSourceName__c.field-meta.xml
<CustomField>
    <fullName>CaseSourceName__c</fullName>
    <formula>Case_Source__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSourceName</label>
    <type>Text</type>
</CustomField>