force-app/main/default/objects/Case/fields/CLINIC_ID__c.field-meta.xml
<CustomField>
    <fullName>CLINIC_ID__c</fullName>
    <formula>Contact_Sites__r.Site__r.Clinic_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLINIC ID</label>
    <type>Text</type>
</CustomField>