force-app/main/default/objects/Case/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <label>Closed On</label>
    <type>Date</type>
</CustomField>