force-app/main/default/objects/Case/fields/Configuration_Item__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Item__c</fullName>
    <label>Configuration Item</label>
    <length>100</length>
    <type>Text</type>
</CustomField>