force-app/main/default/objects/Case/fields/Confirm_Age__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Age__c</fullName>
    <formula>Resolved_On__c -   ClosedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>