force-app/main/default/objects/Case/fields/Contact_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country_Code__c</fullName>
    <formula>Contact.Country_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Country Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>