force-app/main/default/objects/Case/fields/Contact_Last_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Survey_Date__c</fullName>
    <formula>Contact.Last_CSAT_Sent_on__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Survey Date</label>
    <type>DateTime</type>
</CustomField>