force-app/main/default/objects/Case/fields/Contact_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_City__c</fullName>
    <formula>Contact.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing City</label>
    <type>Text</type>
</CustomField>