force-app/main/default/objects/Case/fields/Contact_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_State__c</fullName>
    <formula>Contact.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing State</label>
    <type>Text</type>
</CustomField>