force-app/main/default/objects/Case/fields/Contact_Note__c.field-meta.xml
<CustomField>
    <fullName>Contact_Note__c</fullName>
    <formula>Contact.Contact_Note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Note</label>
    <type>Text</type>
</CustomField>