force-app/main/default/objects/Case/fields/Contact_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferred_Language__c</fullName>
    <formula>TEXT(Contact.Preferred_Language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Preferred Language</label>
    <type>Text</type>
</CustomField>