force-app/main/default/objects/Case/fields/Contact_s_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Country__c</fullName>
    <formula>TEXT(Contact.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Country</label>
    <type>Text</type>
</CustomField>