force-app/main/default/objects/Case/fields/Contact_s_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Job_Title__c</fullName>
    <formula>Contact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Job Title</label>
    <type>Text</type>
</CustomField>