force-app/main/default/objects/Case/fields/Contact_Sites__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Sites</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ContactId</field>
            <operation>equals</operation>
            <valueField>Contact_Sites__c.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact_Sites__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>