force-app/main/default/objects/Case/fields/CSAT_Configuration__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSAT Configuration</label>
    <referenceTo>Follow_Up_Rule_Configuration__c</referenceTo>
    <relationshipLabel>Cases (CSAT Configuration)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>