force-app/main/default/objects/Case/fields/CSAT_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Sent_Date__c</fullName>
    <label>CSAT Sent Date</label>
    <type>Date</type>
</CustomField>