force-app/main/default/objects/Case/fields/Days_for_next_notification__c.field-meta.xml
<CustomField>
    <fullName>Days_for_next_notification__c</fullName>
    <formula>Next_Notification_Date__c - now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days for next notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>