force-app/main/default/objects/Case/fields/Description_Translation__c.field-meta.xml
<CustomField>
    <fullName>Description_Translation__c</fullName>
    <label>Description Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>