force-app/main/default/objects/Case/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>Contact.Division__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>