force-app/main/default/objects/Case/fields/Eligible_for_Survey__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Survey__c</fullName>
    <formula>Account.Eligible_for_Survey__c  &amp;&amp;  NOT( ISBLANK( Contact.Email ) )  &amp;&amp;  NOT(  Contact.Do_Not_Email__c ) &amp;&amp; ISBLANK(  Survey_Sent_on__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Survey</label>
    <type>Checkbox</type>
</CustomField>