force-app/main/default/objects/Case/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <label># Emails</label>
    <length>100</length>
    <type>Text</type>
</CustomField>