force-app/main/default/objects/Case/fields/Field_Force__c.field-meta.xml
<CustomField>
    <fullName>Field_Force__c</fullName>
    <formula>Contact.Field_Force__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Force</label>
    <type>Text</type>
</CustomField>