force-app/main/default/objects/Case/fields/Follow_Up_Rule_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Rule_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow-Up Rule Configuration</label>
    <referenceTo>Follow_Up_Rule_Configuration__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>