force-app/main/default/objects/Case/fields/FollowUpConfigurationKey__c.field-meta.xml
<CustomField>
    <fullName>FollowUpConfigurationKey__c</fullName>
    <formula>AccountId &amp;  TEXT(Contact.Preferred_Language__c) &amp;  Case_Source__c &amp;  Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FollowUpConfigurationKey</label>
    <type>Text</type>
</CustomField>