force-app/main/default/objects/Case/fields/Next_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Notification_Date__c</fullName>
    <label>Next Notification Date</label>
    <type>DateTime</type>
</CustomField>