force-app/main/default/objects/Case/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <formula>Product.Part__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part #</label>
    <type>Text</type>
</CustomField>