force-app/main/default/objects/Case/fields/Prompt1__c.field-meta.xml
<CustomField>
    <fullName>Prompt1__c</fullName>
    <label>Prompt1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>