force-app/main/default/objects/Case/fields/Prompt2__c.field-meta.xml
<CustomField>
    <fullName>Prompt2__c</fullName>
    <label>Prompt2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>