force-app/main/default/objects/Case/fields/QC_d__c.field-meta.xml
<CustomField>
    <fullName>QC_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC&apos;d</label>
    <type>Checkbox</type>
</CustomField>