force-app/main/default/objects/Case/fields/QC_Date__c.field-meta.xml
<CustomField>
    <fullName>QC_Date__c</fullName>
    <label>QC Date</label>
    <type>DateTime</type>
</CustomField>