force-app/main/default/objects/Case/fields/Representative_Type__c.field-meta.xml
<CustomField>
    <fullName>Representative_Type__c</fullName>
    <formula>TEXT(Contact.Representative_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representative Type</label>
    <type>Text</type>
</CustomField>