force-app/main/default/objects/Case/fields/Requestor_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email_Address__c</fullName>
    <label>Requestor Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>