force-app/main/default/objects/Case/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>