force-app/main/default/objects/Case/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Help Desk</fullName>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>C3i</fullName>
            </value>
            <value>
                <fullName>Pfizer</fullName>
            </value>
            <value>
                <fullName>C3i Cognos/SAP BW-BI</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>C3i Helpdesk</fullName>
            </value>
            <value>
                <fullName>C3i Helpdesk w/3rd Party</fullName>
            </value>
            <value>
                <fullName>C3i Helpdesk w/Client</fullName>
            </value>
            <value>
                <fullName>C3i Siebel Admin</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>SMS Team</fullName>
            </value>
            <value>
                <fullName>By Customer</fullName>
            </value>
            <value>
                <fullName>C3i–By remote session</fullName>
            </value>
            <value>
                <fullName>C3i-By Chat</fullName>
            </value>
            <value>
                <fullName>C3i-By Email</fullName>
            </value>
            <value>
                <fullName>C3i-By phone</fullName>
            </value>
            <value>
                <fullName>Escalated -Tier 2</fullName>
            </value>
            <value>
                <fullName>Escalated-Tier 3</fullName>
            </value>
            <value>
                <fullName>C3i-Email</fullName>
            </value>
            <value>
                <fullName>C3i-Escalated</fullName>
            </value>
            <value>
                <fullName>C3i-Phone</fullName>
            </value>
            <value>
                <fullName>C3i-Remote session</fullName>
            </value>
            <value>
                <fullName>Argus Team</fullName>
            </value>
            <value>
                <fullName>CRM Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>