force-app/main/default/objects/Case/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Picklist_Value__c.Type__c</field>
            <operation>equals</operation>
            <value>CONTACT_ROLE</value>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Picklist_Value__c</referenceTo>
    <relationshipLabel>Cases (Role)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>