force-app/main/default/objects/Case/fields/Role_Code__c.field-meta.xml
<CustomField>
    <fullName>Role_Code__c</fullName>
    <formula>Contact.Role_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Code</label>
    <type>Text</type>
</CustomField>