force-app/main/default/objects/Case/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <formula>Contact_Sites__r.Site_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>