force-app/main/default/objects/Case/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <formula>Contact_Studies__r.Study__r.Sponsor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor</label>
    <type>Text</type>
</CustomField>