force-app/main/default/objects/Case/fields/Sub_Status_Set_Time__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status_Set_Time__c</fullName>
    <label>Sub Status Set Time</label>
    <type>DateTime</type>
</CustomField>