force-app/main/default/objects/Case/fields/Sub_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sub_Area__c</fullName>
    <label>Sub-Sub-Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>