force-app/main/default/objects/Case/fields/Subarea__c.field-meta.xml
<CustomField>
    <fullName>Subarea__c</fullName>
    <label>Sub Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>