force-app/main/default/objects/Case/fields/Substatus__c.field-meta.xml
<CustomField>
    <fullName>Substatus__c</fullName>
    <label>Substatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Documents Required</fullName>
            </value>
            <value>
                <fullName>App Received - Missing Attest</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved, Subject To</fullName>
            </value>
            <value>
                <fullName>Approved - Sent to Pharmacy</fullName>
            </value>
            <value>
                <fullName>AR Created in error</fullName>
            </value>
            <value>
                <fullName>Attest Incomp App Miss Info</fullName>
            </value>
            <value>
                <fullName>Attest Not Rcvd App Miss Info</fullName>
            </value>
            <value>
                <fullName>Attest Received - Missing App</fullName>
            </value>
            <value>
                <fullName>Attest Sent - App Filed</fullName>
            </value>
            <value>
                <fullName>Attest with App Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting 2nd Attempt</fullName>
            </value>
            <value>
                <fullName>Awaiting 3rd Attempt</fullName>
            </value>
            <value>
                <fullName>Awaiting 3rd Party Response</fullName>
            </value>
            <value>
                <fullName>Awaiting C3I Action</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Action</fullName>
            </value>
            <value>
                <fullName>Awaiting Client response</fullName>
            </value>
            <value>
                <fullName>Awaiting Cognizant Action</fullName>
            </value>
            <value>
                <fullName>Awaiting Covance Action</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Deskside</fullName>
            </value>
            <value>
                <fullName>Awaiting Escalation</fullName>
            </value>
            <value>
                <fullName>Awaiting Exostar Action</fullName>
            </value>
            <value>
                <fullName>Awaiting info from requester</fullName>
            </value>
            <value>
                <fullName>Awaiting Internal Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Medidata Action</fullName>
            </value>
            <value>
                <fullName>Awaiting Oracle Action</fullName>
            </value>
            <value>
                <fullName>Awaiting PF Action</fullName>
            </value>
            <value>
                <fullName>Awaiting Project Completion</fullName>
            </value>
            <value>
                <fullName>Awaiting T1 Level 1 Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>