force-app/main/default/objects/Case/fields/Survey_Expires_on__c.field-meta.xml
<CustomField>
    <fullName>Survey_Expires_on__c</fullName>
    <label>Survey Expires on</label>
    <type>DateTime</type>
</CustomField>