force-app/main/default/objects/Case/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <formula>$Label.Survey_URL &amp;ContactId &amp;&apos;&amp;caId=&apos;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>