force-app/main/default/objects/Case/fields/Survey_Reminder_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Survey_Reminder_DateTime__c</fullName>
    <label>Survey Reminder DateTime</label>
    <type>DateTime</type>
</CustomField>