force-app/main/default/objects/Case/fields/Survey_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Response Received</label>
    <type>Checkbox</type>
</CustomField>