force-app/main/default/objects/Case/fields/Survey_Sent_on__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_on__c</fullName>
    <label>Survey Sent on</label>
    <type>DateTime</type>
</CustomField>