force-app/main/default/objects/Case/fields/Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status__c</fullName>
    <formula>if( NOT(ISBLANK(Survey_Sent_on__c)), 
IF( Survey_Response_Received__c ,&apos;Completed&apos;, 
IF( now() &lt;  Survey_Expires_on__c   ,&apos;Pending&apos;, &apos;Abandoned&apos; )) 
,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Status</label>
    <type>Text</type>
</CustomField>