force-app/main/default/objects/Case/fields/SurveyConfigurationKey__c.field-meta.xml
<CustomField>
    <fullName>SurveyConfigurationKey__c</fullName>
    <formula>AccountId &amp; TEXT(Contact.Preferred_Language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SurveyConfigurationKey</label>
    <type>Text</type>
</CustomField>